[EFL][WK2] Fix destination path when download with suggested filename on the Minibrowser https://bugs.webkit.org/show_bug.cgi?id=98334

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-10-04
Reviewed by Gyuyoung Kim.

Add callback functions for download requests to Minibrowser to set the destination path for download.
Set the destination path with suggested file name as (destination folder) + (suggested file name).
The 'destination folder' should be a specific folder user selected, but is set to '/tmp' for now.

Additionally, for printing out the download status,
use the info macro and set the verbose variable to 1 to enable it.

* MiniBrowser/efl/main.c:
(on_download_request):
(on_download_finished):
(on_download_failed):
(browserCreate):

Canonical link: https://commits.webkit.org/116466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130472 268f45cc-cd09-0410-ab3c-d52691b4dbfc